<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignWithParentIfMissing="false"
    android:background="@color/WalmartBlue"
    tools:context=".Products2">

    <TextView
        android:id="@+id/productsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/WalmartBlue"
        android:gravity="center_horizontal"
        android:text="@string/products"
        android:textAlignment="center"
        android:textColor="@color/WalmartGold"
        android:textSize="30sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/productsTitle"
        android:layout_above="@+id/products_bottomNavMenu">


        <LinearLayout
            android:id="@+id/productList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ListView
                android:id="@+id/listView1"
                android:layout_width="match_parent"
                android:layout_height="520dp"
                android:background="@color/White" />

            <ListView
                android:id="@+id/listView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/White"/>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
    android:id="@+id/bottomNavigationView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/WalmartBlue">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/mainMenu"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/WalmartBlue"
            android:contentDescription="@string/mainMenuButtonDes"
            android:src="@drawable/baseline_home_black_24dp" />

        <ImageButton
            android:id="@+id/products"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/WalmartBlue"
            android:contentDescription="@string/productsButtonDes"
            android:src="@drawable/baseline_inventory_2_black_24dp" />

        <ImageButton
            android:id="@+id/newList"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/WalmartBlue"
            android:contentDescription="@string/newListButtonDes"
            android:src="@drawable/baseline_shopping_cart_black_24dp" />

        <ImageButton
            android:id="@+id/savedLists"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:background="@color/WalmartBlue"
            android:contentDescription="@string/savedListButtonDes"
            android:src="@drawable/baseline_directions_black_24dp" />

    </LinearLayout>


</com.google.android.material.bottomnavigation.BottomNavigationView>

    <ImageButton
        android:id="@+id/pro2_BackButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        app:srcCompat="@drawable/abc_vector_test"
        android:background="@color/WalmartBlue"/>

    <ImageButton
        android:id="@+id/pro2_StartButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        app:srcCompat="@android:drawable/ic_menu_directions"
        android:background="@color/WalmartBlue"/>

</RelativeLayout>